name:                multiaddr
version:             0.1.0.0
synopsis:            multiaddr - network address format
description:         multiaddr is the implementation of the network address format described by jbenet <https://github.com/jbenet/multiaddr>

                     multiaddr is a standard way to represent addresses that:

                        * support any standard network protocols
                        * self-describe (include protocols)
                        * have a binary packed format
                        * have a nice string representation
                        * encapsulate well

homepage:            https://github.com/basile-henry/hs-multiaddr
license:             MIT
license-file:        LICENSE
author:              Basile Henry
maintainer:          basile.henry@hotmail.com
copyright:           2016 Basile Henry
category:            Network
build-type:          Simple
cabal-version:       >=1.10

homepage:            https://github.com/basile-henry/hs-multiaddr

source-repository head
  type: git
  location: https://github.com/basile-henry/hs-multiaddr.git


library
  exposed-modules:     Network.MultiAddr 
  build-depends:       base >=4.8 && <4.9,
                       bytestring,
                       bytes,
                       cereal,
                       base58-bytestring,
                       utf8-string,
                       iproute
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite multiaddr-tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  build-depends:      base >= 4.7,
                      bytestring,
                      multiaddr,
                      HUnit,
                      tasty,
                      tasty-hunit
  default-language:   Haskell2010
  ghc-options:        -threaded -O2 -Wall